# Learn-FastAPI

./: Makefile  README.md  pyproject.toml  runserver.py  test.db
6.Databases and Asynchronous ORMs/: 6.Databases and Asynchronous ORMs.ipynb  database.py  models.py  readme.txt
LLM/: llm1.ipynb
bookstore/: main.py  models.py  runserver.py
bookstore/routers/: authors.py  books.py
concurrency/threading_/: main.py  threading_.ipynb
farm/: main.py  schema.py
fastapi_mongodb/: config.py  main.py
fastapi_mongodb/database/: models.py  schemas.py
fastapi_start/: main.py  router_example.py  runserver.py
no_sql_example/: database.py  main.py
notebooks/: 1_first_steps_with_fastapi.ipynb  2_working_with_data.ipynb  learn-fastapi.ipynb  test.db  working_with_data.ipynb
parallel computing/: 01_create_processes.py
parallel computing/threads/: 00_create_thread.py
python_mongodb/: 00_crud_basics.ipynb  01_crud_insert.ipynb  02_FIND_CURSOR_CRUD.ipynb  03_extract_p5_c1_c2.ipynb  CA-Inter-P5 - Chapter 1 - Nature, Objective and Scope of Audit.docx  CA-Inter-P5 - Chapter 2 - Audit Strategy, Audit Planning and Audit Programme.docx  CA-P1-M1-C1-U1-Theory.docx  azure_openai.ipynb  crud_basics.ipynb  crud_insert.ipynb  extractor.ipynb  extractor2.ipynb  qa_output.json  qa_pairs.jsonl
sql_example/: database.py  main.py
