[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["subratamondal1 <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
ipykernel = "^6.29.5"
httpie = "^3.2.3"
pydantic = "^2.9.2"
pymongo = {extras = ["srv"], version = "^4.10.1"}
python-dotenv = "^1.0.1"
langchain-core = "^0.3.18"
langchain-openai = "^0.2.8"
torch = "2.2.2"
langchain-huggingface = "^0.1.2"
langchain-community = "^0.3.7"
docx = "^0.2.4"
docx2pdf = "^0.1.8"
pdf2image = "^1.17.0"
python-docx = "^1.1.2"
openai = "^1.54.5"
notebook = "^7.2.2"
pymongo-schema = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
